--- a/datoscamara.properties
+++ b/datoscamara.properties
@@ -1,1 +1,7 @@
-
+IP=http://192.168.0.126
+IP_VIDEO=/tmpfs/auto.jpg 
+ARRIBA=/ytup.cgi
+ABAJO=/ytdown.cgi
+IZQUIERDA=/ytleft.cgi
+DERECHA=/ytright.cgi
+ESTADO_INICIAL=/cgi-in/camctrl.cgi?move=home
